T483: Fix for too long covers on search view.

--- a/static/css/search.scss
+++ b/static/css/search.scss
@@ -273,8 +273,8 @@ $panel-border-width: 2px;
 
 .book_box{
   background-color: white;
-  padding: 20px 20px 50px 20px;
-  min-height: 100px;
+  padding: 20px;
+  min-height: 140px;
 
   div.track_button {
     @extend .blue_button;
@@ -302,12 +302,25 @@ $panel-border-width: 2px;
     @extend .red_button;
     @extend .box_button;
   }
-
-  img.product_details{
-    width:100px;
-  }
-
 }
+
+.image-wrap {
+    max-height: 150px;
+    overflow: hidden;
+    max-width: 100px;
+}
+
+.image-wrap-border{
+    padding:5px 5px 2px 5px;
+    border:#e3e3e3 1px solid;
+    margin-right:20px;
+    float:left;
+}
+
+.image-wrap img {
+    width: 100%;
+}
+
 
 .puller {
   $height: 36px;
