--- a/static/css/search_results.scss
+++ b/static/css/search_results.scss
@@ -106,12 +106,7 @@
   width:100%;
   //margin-top:20px;
 }
-.search_list img{
-  float:left;
-  padding:5px;
-  border:#e3e3e3 1px solid;
-  margin-right:20px;
-}
+
 .s_title{
   font-size:34px;
   font-weight:bold;
